--- a/my_own_namespace/yandex_cloud_elk/roles/my_role/meta/main.yml
+++ b/my_own_namespace/yandex_cloud_elk/roles/my_role/meta/main.yml
@@ -17,6 +17,7 @@ galaxy_info:
   license: license (GPL-2.0-or-later, MIT, etc)
 
   min_ansible_version: 2.1
+  min_python_version: 3.10
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
